PROTON-784: remove settled deliveries from the delivery map to prevent buildup